--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^5.0.0",
-    "sql.js": "^1.13.0"
+    "lucide-react": "0.460.0",
+    "react-markdown": "9.0.1",
+    "remark-gfm": "4.0.0",
+    "leaflet": "1.9.4",
+    "react-leaflet": "4.2.1",
+    "sql.js": "1.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
