--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "0.460.0",
     "react-markdown": "9.0.1",
     "remark-gfm": "4.0.0",
+    "remark-breaks": "4.0.0",
     "leaflet": "1.9.4",
     "react-leaflet": "4.2.1",
     "sql.js": "1.12.0"
